luis_website/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luis-blog
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: luis-blog
  template:
    metadata:
      labels:
        app: luis-blog
    spec:
      containers:
        - name: luis-blog
          image: docker.lab.qstetten.de/luis-website:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
