luis_website/service.yml
apiVersion: v1
kind: Service
metadata:
  name: luis-blog
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: luis-blog
