luis_website/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: luis-blog
  namespace: luis-blog
spec:
  tls:
    - hosts:
        - lcarilla.de
      secretName: luis-blog-cert
  rules:
    - host: "lcarilla.de"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: luis-blog
                port:
                  number: 80
